# py_vs_rs

./: .gitignore  Makefile  README.md  report.md  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
rust_version/polling_places_analysis/: Cargo.toml  polling_place_20240514.csv
rust_version/polling_places_analysis/src/: main.rs
src/: main.py
tests/: test_example.py
